has item condition